# updt_UCC

./: .gitignore  1_2_helper_funcs.py  1_get_new_DB.py  2_update_UCC_DB.py  3_update_UCC_site.py  A_get_new_DB.py  B_update_UCC_DB.py  C_process_member_files.py  C_update_zenodo_files.py  DBs_edits.md  D_update_UCC_site.py  README.md  UCC_cat.csv  UCC_cat_20230626_in.csv  UCC_cat_20230626_out.csv  UCC_info.md  add_entries.md  add_new_DB.md  add_new_DB.py  compare_UCC.py  coords_dist_B_vs_C.py  get_new_DB.py  main.py  make_entries.py  manual_params.csv  modify_entry.md  move_files.py  naming_order.txt  notebook.txt  notebook_OLD.txt  params.ini  pyproject.toml  requirements.txt  temp_new_DBs.txt  ucc_site_build.md  update_UCC.md  update_UCC_DB.py  update_UCC_site.py  updt_3500_entries.py  updt_DB_tables.py  (+1 more)
assets_uncompressed/: euclidean-search.js
data/: CHANGELOG.md  CHANGELOG.txt  UCC_cat_25092211.csv  UCC_cat_B.csv  UCC_cat_C.csv  UCC_cmmts.json  all_names.csv  comments.md  data_dates.json  databases_info.json  globulars.csv  manual_centers.csv
databases/: ALFONSO2024.csv  ANGELO2019.csv  BICA19.csv  BICA2019.csv  BORISSOVA2011.csv  BOSSINI19.csv  BOSSINI2019.csv  CANTAT20.csv  CASADOHENDY23.csv  CASTRO20.csv  CASTRO22.csv  CHEN2003.csv  CHI2023.csv  CHI2023_2.csv  CHI23.csv  CHI23_2.csv  CHI23_3.csv  DAMBIS1999.csv  DAMBIS99.csv  DIAS2002.csv  DIAS2019.csv  DIAS21.csv  DONOR2020.csv  FERREIRA19.csv  FERREIRA20.csv  FERREIRA2019.csv  FERREIRA21.csv  GLUSHKOVA2010.csv  HAO2022.csv  HAO22.csv  HE2022_1.csv  HE2023.csv  HE21.csv  HE22.csv  HE22_1.csv  HE22_2.csv  (+29 more)
(+337 files in other folders)
